@@ -180,3 +180,15 @@ def feed_list(request, username):
                    })
     return response
 
+@jsonView()
+@login_required
+def external(request, id):
+    """Returns JSON package of podcast entries for the
+    specified podcast.
+    """
+    logging.debug('looking for %s' % id)
+    podcast = Podcast.objects.get(id=id)
+    parsed_feed = podcast.get_current_feed_contents()
+    response = {}
+    response['entries'] = convert_feed_to_entries(parsed_feed)
+    return response
